<resources>
    <string name="app_name">Train Your Mind</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="train_your_mind_with_puzzle">Train your mind with puzzle</string>
    <string name="play">play</string>
    <string name="question_one">What begins with T ends with T and has T in it?</string>
    <string name="next">next</string>
    <string name="question_two">Which letter of the following alphabet has the most water?</string>
    <string name="a">A</string>
    <string name="c">C</string>
    <string name="e">E</string>
    <string name="i">I</string>
    <string name="w">W</string>
    <string name="y">Y</string>
    <string name="question_three">Which month has 28 days?</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="october">October</string>
    <string name="question_four">How many letters are there in the alphabet?</string>
    <string name="_8">8</string>
    <string name="_11">11</string>
    <string name="_26">26</string>
    <string name="_27">27</string>
    <string name="question_five">What is next in this sequence?\nJFMAMJJASON...</string>
    <string name="d">D</string>
    <string name="j">J</string>
    <string name="n">N</string>
    <string name="your_iq_level_is">Your IQ level is:</string>
    <string name="try_again">Try again</string>
    <string name="answer">Answer</string>
</resources>
